[package]
name = "webview"
version = "0.1.0"
authors = ["Alex Moon <alex.r.moon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"raw-window-handle" = "0.3.3"
json = "0.12.0"
http = "0.2.0"

[dev-dependencies]
"winit" = "0.19.5"

[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2.3"

[target."cfg(target_os = \"macos\")".dependencies.core-graphics]
version = "0.17.3"

[target."cfg(target_os = \"macos\")".dependencies.cocoa]
version = "0.18.4"
