[package]
name = "webview"
version = "0.1.0"
authors = ["Alex Moon <alex.r.moon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"raw-window-handle" = "0.3.3"
http = "0.2.1"
dispatch = "0.2.0"

[dev-dependencies]
"winit" = "0.22.1"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"
core-graphics = "0.19.0"
cocoa = "0.20.0"
